--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description: >
 # Your information
 email: gleefe1995@naver.com
 author: babo.bum
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: One sentence introducing yourself.
+avatar: "/assets/1617621012045.jpg"
+profile: cvlab
 #twitter_username: twitter_username
 #github_username:  github_username
 profile_links:
