--- a/_config.yml
+++ b/_config.yml
@@ -58,5 +58,5 @@ defaults:
 
 kramdown:
   input: GFM
-#  syntax_highlighter: rouge
-#  math_engine: mathjax
+  syntax_highlighter: rouge
+  math_engine: mathjax
